[CORE] Upgrade Codebase to 17